load(
    "@rules_erlang//:app_file.bzl",
    "app_file",
)
load(
    "@rules_erlang//:erlang_bytecode.bzl",
    "erlang_bytecode",
)
load(
    "@rules_erlang//:erlang_app_info.bzl",
    "erlang_app_info",
)
load(
    "@rules_erlang//:erlang_app.bzl",
    "DEFAULT_ERLC_OPTS",
    "DEFAULT_TEST_ERLC_OPTS",
)
load(
    "@rules_erlang//:xref2.bzl",
    "xref",
)
load(
    "@rules_erlang//:dialyze.bzl",
    "DEFAULT_PLT_APPS",
    "dialyze",
    "plt",
)
load(
    "@rules_erlang//:ct.bzl",
    "assert_suites2",
    "ct_suite",
)

genrule(
    name = "src",
    srcs = ["@rules_erlang//gazelle:erl_attrs_to_json.sh"],
    outs = ["src/erl_attrs_to_json.erl"],
    cmd = """\
echo "-module(erl_attrs_to_json)." > $@
tail -n +4 $< >> $@
""",
)

APP_NAME = "erl_attrs_to_json"

APP_VERSION = "1.0.0"

erlang_bytecode(
    name = "beam_files",
    srcs = ["src/erl_attrs_to_json.erl"],
    dest = "ebin",
    erlc_opts = DEFAULT_ERLC_OPTS,
)

erlang_bytecode(
    name = "test_beam_files",
    testonly = True,
    srcs = ["src/erl_attrs_to_json.erl"],
    dest = "test",
    erlc_opts = DEFAULT_TEST_ERLC_OPTS + [
        "+nowarn_export_all",
    ],
)

app_file(
    name = "app_file",
    app_name = APP_NAME,
    app_version = APP_VERSION,
    modules = [":beam_files"],
)

erlang_app_info(
    name = "erlang_app",
    srcs = ["src/erl_attrs_to_json.erl"],
    app = ":app_file",
    app_name = APP_NAME,
    beam = [":beam_files"],
)

erlang_app_info(
    name = "test_erlang_app",
    testonly = True,
    srcs = ["src/erl_attrs_to_json.erl"],
    app = ":app_file",
    app_name = APP_NAME,
    beam = [":test_beam_files"],
)

xref()

plt(
    name = "base_plt",
    apps = DEFAULT_PLT_APPS,
)

dialyze(
    plt = ":base_plt",
)

ct_suite(
    name = "erl_attrs_to_json_SUITE",
    size = "small",
    data = [
        "test/basic.erl",
        "test/test.erl",
    ],
    deps = [
        "@thoas//:erlang_app",
    ],
)

assert_suites2()
