load("@bazel_gazelle//:def.bzl", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_test")

gazelle_binary(
    name = "gazelle_erlang_binary",
    languages = ["@rules_erlang//gazelle"],
)

go_test(
    name = "integration_suite",
    srcs = ["erlang_test.go"],
    data = [
        ":gazelle_erlang_binary",
        "@rules_erlang//gazelle:dot_app_to_json",
        "@rules_erlang//gazelle:erl_attrs_to_json",
        "@rules_erlang//gazelle:hex_metadata_config_to_json",
        "@rules_erlang//gazelle:rebar_config_to_json",
    ] + glob(["testdata/**"]),
    deps = [
        "@bazel_gazelle//testtools:go_default_library",
        "@com_github_emirpasic_gods//lists/singlylinkedlist",
        "@com_github_ghodss_yaml//:yaml",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
    tags = ["manual"],
)

go_test(
    name = "update_test",
    srcs = ["update_test.go"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@rules_erlang//gazelle/fetch",
    ],
    tags = ["manual"],
)

test_suite(
    name = "unit_suite",
    tests = [
        "update_test",
    ],
)
