load(
    "@rules_erlang//:xref2.bzl",
    "xref",
)
load(
    "@rules_erlang//:dialyze.bzl",
    "DEFAULT_PLT_APPS",
    "dialyze",
    "plt",
)
load(
    "@rules_erlang//:ct.bzl",
    "assert_suites2",
    "ct_suite",
)

alias(
    name = "erlang_app",
    actual = "@rules_erlang//tools/rules_erlang_compiler:erlang_app",
)

alias(
    name = "test_erlang_app",
    actual = "@rules_erlang//tools/rules_erlang_compiler:test_erlang_app",
)

xref()

plt(
    name = "base_plt",
    apps = DEFAULT_PLT_APPS,
)

dialyze(
    plt = ":base_plt",
)

ct_suite(
    name = "rules_erlang_compiler_SUITE",
    size = "small",
)

assert_suites2()
