load(
    "//private:erlang_bytecode.bzl",
    "erlang_bytecode",
)
load(
    "//private:escript_flat.bzl",
    "escript_flat",
)
load(
    "//tools:erlang.bzl",
    "ERLC_OPTS",
)

exports_files(["src/app_file_tool.erl"])

erlang_bytecode(
    name = "app_file_tool_beam",
    srcs = glob(["src/*.erl"]),
    erlc_opts = ERLC_OPTS,
)

escript_flat(
    name = "app_file_tool",
    beam = ":app_file_tool_beam",
)
