load("@rules_erlang//:erlang_app.bzl", "erlang_app", "test_erlang_app")
load("//:escript.bzl", "escript_archive")

APP_NAME = "erl_attrs_to_json"

APP_VERSION = "1.0.0"

DEPS = ["@thoas_rules_erlang//:erlang_app"]

erlang_app(
    name = "erlang_app",
    app_name = APP_NAME,
    app_version = APP_VERSION,
    deps = DEPS,
)

test_erlang_app(
    name = "test_erlang_app",
    app_name = APP_NAME,
    app_version = APP_VERSION,
    deps = DEPS,
)

escript_archive(
    name = APP_NAME,
    app = ":erlang_app",
    visibility = ["//visibility:public"],
)
