load("//:erlang_app.bzl", "erlang_app", "test_erlang_app")

APP_NAME = "erl_attrs_to_json"

APP_VERSION = "1.0.0"

erlang_app(
    name = "erlang_app",
    app_name = APP_NAME,
    app_version = APP_VERSION,
)

test_erlang_app(
    name = "test_erlang_app",
    app_name = APP_NAME,
    app_version = APP_VERSION,
)
