load("//:erlang_app.bzl", "erlang_app", "test_erlang_app")
load("//:escript.bzl", "escript_archive")

APP_NAME = "erl_attrs_to_json_gazelle"

APP_VERSION = "1.0.0"

DEPS = [
    "//tools/erl_attrs_to_json:erlang_app",
    "@thoas_rules_erlang//:erlang_app",
]

erlang_app(
    name = "erlang_app",
    app_name = APP_NAME,
    app_version = APP_VERSION,
    deps = DEPS,
)

test_erlang_app(
    name = "test_erlang_app",
    app_name = APP_NAME,
    app_version = APP_VERSION,
    deps = DEPS,
)

escript_archive(
    name = APP_NAME,
    app = ":erlang_app",
    visibility = ["//visibility:public"],
)
