load("//:erlang_app.bzl", "erlang_app", "test_erlang_app")
load("//:escript.bzl", "escript_archive")
load(":worker_wrapper.bzl", "worker_wrapper")

APP_NAME = "erlc_persistent_worker"

APP_VERSION = "1.0.0"

DEPS = ["@thoas//:erlang_app"]

erlang_app(
    name = "erlang_app",
    app_name = APP_NAME,
    app_version = APP_VERSION,
    deps = DEPS,
)

test_erlang_app(
    name = "test_erlang_app",
    app_name = APP_NAME,
    app_version = APP_VERSION,
    deps = DEPS,
)

escript_archive(
    name = APP_NAME,
    app = ":erlang_app",
)

worker_wrapper(
    name = "%s_wrapper" % APP_NAME,
    escript = ":%s" % APP_NAME,
    visibility = ["//visibility:public"],
)
