load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load(":worker_wrapper.bzl", "worker_wrapper")

TOOL_NAME = "erlc_persistent_worker"

go_proto_library(
    name = "worker_protocol_go_proto",
    importpath = "github.com/rabbitmq/rules_erlang/tools/erlc_persistent_worker/worker_protocol",
    protos = [
        "@bazel_tools//src/main/protobuf:worker_protocol_proto",
    ],
)

go_binary(
    name = TOOL_NAME,
    srcs = [
        "main.go",
    ],
    deps = [
        ":worker_protocol_go_proto",
        "@org_golang_google_protobuf//encoding/protodelim:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
    # importpath = "github.com/rabbitmq/rules_erlang/tools/erlc_persistent_worker",
    # visibility = ["//visibility:public"],
)

worker_wrapper(
    name = "%s_wrapper" % TOOL_NAME,
    visibility = ["//visibility:public"],
    worker = ":%s" % TOOL_NAME,
)
