load(
    "//:erlang_app.bzl",
    "DEFAULT_TEST_ERLC_OPTS",
    "erlang_app",
    "test_erlang_app",
)
load("//:xref.bzl", "xref")
load("//:dialyze.bzl", "DEFAULT_PLT_APPS", "dialyze", "plt")
load("//:ct.bzl", "ct_suite")
load(":shard_suite.bzl", "shard_suite")

shard_suite()

APP_NAME = "shard_suite"

APP_VERSION = "1.0.0"

erlang_app(
    app_name = APP_NAME,
    app_version = APP_VERSION,
)

test_erlang_app(
    app_name = APP_NAME,
    app_version = APP_VERSION,
    erlc_opts = DEFAULT_TEST_ERLC_OPTS + [
        "+nowarn_export_all",
    ],
)

xref()

plt(
    name = "base_plt",
    apps = DEFAULT_PLT_APPS + [
        "crypto",
    ],
)

dialyze(
    plt = ":base_plt",
)

ct_suite(
    name = "shard_suite_SUITE",
    size = "small",
    additional_srcs = [
        "test/example_suite.erl",
    ],
)
