load(
    "//:erlang_bytecode2.bzl",
    "erlang_bytecode",
)
load(
    "//:erlc_opts_file.bzl",
    "erlc_opts_file",
)
load(
    "//private:escript_flat.bzl",
    "escript_flat",
)
load(
    "//:erlang_app.bzl",
    "DEFAULT_ERLC_OPTS",
)

exports_files(["src/shard_suite.erl"])

erlc_opts_file(
    name = "erlc_opts",
    values = DEFAULT_ERLC_OPTS,
)

erlang_bytecode(
    name = "beam_files",
    srcs = glob(["src/*.erl"]),
    dest = "ebin",
    erlc_opts = ":erlc_opts",
)

escript_flat(
    name = "shard_suite",
    beam = ":beam_files",
    visibility = ["//visibility:public"],
)
